[gd_scene load_steps=12 format=3 uid="uid://d23ny1xrs52p5"]

[ext_resource type="Theme" uid="uid://c2ppqoj6pfm85" path="res://ui/MainMenu/MenuTheme.tres" id="1_8rlmn"]
[ext_resource type="Texture2D" uid="uid://ck0ryfpje7uw8" path="res://assets/sprites/general/TitleScreen/title_screen_07.png" id="1_qvlgp"]
[ext_resource type="Shader" path="res://assets/shaders/battle_background.gdshader" id="2_1md0e"]
[ext_resource type="Script" path="res://ui/MusicSettings/music_settings.gd" id="2_xo8gf"]
[ext_resource type="FontFile" uid="uid://bn1yp4fkor0tt" path="res://assets/fonts/Handwriting_V2-Regular.ttf" id="4_2bp50"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4vqh7"]
shader = ExtResource("2_1md0e")
shader_parameter/override_alpha = 1.0
shader_parameter/screen_height = 640.0
shader_parameter/amplitude = 0.075
shader_parameter/frequency = 10.0
shader_parameter/speed = 2.0
shader_parameter/amplitude_vertical = 0.0
shader_parameter/frequency_vertical = 0.0
shader_parameter/speed_vertical = 0.0
shader_parameter/scroll_direction = Vector2(0, 0)
shader_parameter/scrolling_speed = 0.08
shader_parameter/enable_palette_cycling = false
shader_parameter/palette_speed = 0.1
shader_parameter/enable_scanlines = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fhvan"]
bg_color = Color(0, 0, 0, 0.529412)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
anti_aliasing = false

[sub_resource type="LabelSettings" id="LabelSettings_0trqc"]
font = ExtResource("4_2bp50")
font_size = 23
outline_size = 7
outline_color = Color(0.270588, 0.156863, 0.235294, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_1umaq"]
color = Color(0.67451, 0.196078, 0.196078, 1)
thickness = 3

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n2enn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pm2qq"]

[node name="MusicSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_8rlmn")
script = ExtResource("2_xo8gf")
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_4vqh7")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_qvlgp")
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 75
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 75
theme_override_constants/margin_bottom = 50

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fhvan")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"
label_settings = SubResource("LabelSettings_0trqc")
horizontal_alignment = 1

[node name="VSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_1umaq")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_n2enn")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/VBoxContainer"]
layout_mode = 2
text = "Master"
label_settings = SubResource("LabelSettings_0trqc")
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label2" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/VBoxContainer"]
layout_mode = 2
text = "Music"
label_settings = SubResource("LabelSettings_0trqc")
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label3" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/VBoxContainer"]
layout_mode = 2
text = "Sound Effects"
label_settings = SubResource("LabelSettings_0trqc")
horizontal_alignment = 1
vertical_alignment = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_n2enn")

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_pm2qq")

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 14

[node name="MasterSlider" type="HSlider" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="MusicSlider" type="HSlider" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="SFXSlider" type="HSlider" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="VSeparator3" type="VSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_pm2qq")

[node name="VBoxContainer4" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_n2enn")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="MasterPrecentage" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer4/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "100%"
label_settings = SubResource("LabelSettings_0trqc")
horizontal_alignment = 1
vertical_alignment = 2

[node name="MusicPrecentage" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer4/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "100%"
label_settings = SubResource("LabelSettings_0trqc")
horizontal_alignment = 1
vertical_alignment = 2

[node name="SFXPrecentage" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer4/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "100%"
label_settings = SubResource("LabelSettings_0trqc")
horizontal_alignment = 1
vertical_alignment = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_n2enn")

[node name="Close" type="Button" parent="."]
layout_mode = 0
offset_left = 550.0
offset_top = 15.0
offset_right = 619.0
offset_bottom = 47.0
text = "Close"

[connection signal="value_changed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="visibility_changed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/SFXSlider" to="." method="_on_sfx_slider_visibility_changed"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
